tests/valid/luaTruthiness.ts
// @ts-nocheck
const str = "hello";
if (str) {
	console.log(str);
}
