tests/invalid/luaTruthiness.ts
// @ts-nocheck
if ("") {
	console.log("empty string check");
}
